--- a/_posts/CTFs/404_CTF/Renseignement en sources ouvertes/Equipement désuet/2022-11-07-README.md
+++ b/_posts/CTFs/404_CTF/Renseignement en sources ouvertes/Equipement désuet/2022-11-07-README.md
@@ -1,3 +1,12 @@
+---
+title: CTFs | 404CTF | RESO | Equipement désuet
+author: BatBato
+date: 2022-11-07
+categories: [CTFs, 404CTF, RESO, Equipement désuet]
+tags: [CTF, 404CTF, RESO]
+permalink: /CTFs/404CTF/RESO/Equipement_desuet
+---
+
 # Equipement désuet
 
 On a ici une [image d'un minitel](https://github.com/Nouman404/404CTF_2022/blob/main/Renseignement%20en%20sources%20ouvertes/Equipement%20d%C3%A9suet/equipement_desuet.jpg). Ancêtre de l'ordinateur et de l'internet qu'on connait aujourd'hui.
