--- a/_posts/CTFs/404_CTF/Web/Fiché JS/2022-11-07-README.md
+++ b/_posts/CTFs/404_CTF/Web/Fiché JS/2022-11-07-README.md
@@ -1,5 +1,5 @@
 ---
-title: CTFs | 404CTF | Fiche JS
+title: CTFs | 404CTF | Fiché JS
 author: BatBato
 date: 2022-11-07
 categories: [CTFs, 404CTF, Web]
