--- a/_posts/CTFs/404_CTF/2022-11-07-404CTF.md
+++ b/_posts/CTFs/404_CTF/2022-11-07-404CTF.md
@@ -4,7 +4,7 @@ author: BatBato
 date: 2022-11-07
 categories: [CTFs, 404CTF]
 tags: []
-permalink: /CTFs/404CTF/ReadMe
+permalink: /CTFs/404CTF/
 ---
 
 
