--- a/_posts/CTFs/404_CTF/Web/Le braquage/2022-11-07-README.md
+++ b/_posts/CTFs/404_CTF/Web/Le braquage/2022-11-07-README.md
@@ -16,8 +16,8 @@ Voici la consigne :
 
 Ce CTF sur les SQLi est divisé en trois partie :
 
-- [Discussions](https://github.com/Nouman404/404CTF_2022/tree/main/Web/Le%20braquage/Discussions)
-- [Informations](https://github.com/Nouman404/404CTF_2022/tree/main/Web/Le%20braquage/Informations)
-- [Rencontres](https://github.com/Nouman404/404CTF_2022/tree/main/Web/Le%20braquage/Rencontres)
+- [Discussions](https://nouman404.github.io/CTFs/404CTF/Web/Le_braquage/Discussions)
+- [Informations](https://nouman404.github.io/CTFs/404CTF/Web/Le_braquage/Informations)
+- [Rencontres](https://nouman404.github.io/CTFs/404CTF/Web/Le_braquage/Rencontres)
 
 ![image](https://user-images.githubusercontent.com/73934639/174604828-5be7d334-40ee-4edc-9e2a-f997539e9f65.png)
