--- a/_posts/CTFs/404_CTF/Web/Le braquage/Discussions/2022-11-07-README.md
+++ b/_posts/CTFs/404_CTF/Web/Le braquage/Discussions/2022-11-07-README.md
@@ -9,10 +9,12 @@ permalink: /CTFs/404CTF/Web/Le_braquage/Discussions
 
 # Discussions
 
-Dans ce challenge il s'agit simplement d'utiliser le ```OR``` pour outrepasser l'authentification :</br>
+Dans ce challenge il s'agit simplement d'utiliser le ```OR``` pour outrepasser l'authentification :
+
 ![image](https://user-images.githubusercontent.com/73934639/174605992-c27599cd-0d8c-48d3-b422-019ba1c3b8de.png)
 
-On obtient donc le numéro de téléphone et l'adresse postale :</br>
+On obtient donc le numéro de téléphone et l'adresse postale :
+
 ![image](https://user-images.githubusercontent.com/73934639/174606109-44442a9c-e640-4478-8e85-82abfefbcc14.png)
 
-On passe à la [deuxième étape](https://github.com/Nouman404/404CTF_2022/tree/main/Web/Le%20braquage/Informations).
+On passe à la [deuxième étape](https://nouman404.github.io/CTFs/404CTF/Web/Le_braquage/Informations).
