--- a/_posts/CTFs/404_CTF/Stegano/2022-11-07-README.md
+++ b/_posts/CTFs/404_CTF/Stegano/2022-11-07-README.md
@@ -9,19 +9,15 @@ permalink: /CTFs/404CTF/Stegano
 
 # Stéganographie 
 
-La plume à la main :
-https://nouman404.github.io/CTFs/404CTF/Stegano/La_plume_%C3%A0_la_main 
+- [La plume à la main](https://nouman404.github.io/CTFs/404CTF/Stegano/La_plume_a_la_main)
 
 
-PNG : Un logo obèse [1/4] : 
-https://nouman404.github.io/CTFs/404CTF/Stegano/PNG%20:%20Un%20logo%20ob%C3%A8se/Un_logo_ob%C3%A8se_1
+- [PNG : Un logo obèse [1/4]](https://nouman404.github.io/CTFs/404CTF/Stegano/PNG_Un_logo_obese/Un_logo_obese1)
 
 
-PNG : Drôles de chimères [2/4] : 
-https://nouman404.github.io/CTFs/404CTF/Stegano/PNG%20:%20Un%20logo%20ob%C3%A8se/Dr%C3%B4les%20de%20chim%C3%A8res
+- [PNG : Drôles de chimères [2/4]](https://nouman404.github.io/CTFs/404CTF/Stegano/PNG_Un_logo_obese/Drole_de_chimere)
 
 
-Stéréographie : 
-https://nouman404.github.io/CTFs/404CTF/Stegano/St%C3%A9r%C3%A9ographie
+- [Stéréographie](https://nouman404.github.io/CTFs/404CTF/Stegano/Stereographie)
 
 
