--- a/_posts/CTFs/404_CTF/Stegano/PNG : Un logo obèse/Un_logo_obèse_1/2022-11-07-README.md
+++ b/_posts/CTFs/404_CTF/Stegano/PNG : Un logo obèse/Un_logo_obèse_1/2022-11-07-README.md
@@ -1,8 +1,8 @@
 ---
-title: CTFs | 404CTF | Stegano | PNG : Un logo obèse | Un logo obèse1
+title: CTFs | 404CTF | Stegano | PNG : Un logo obèse | Un_logo_obese1
 author: BatBato
 date: 2022-11-07
-categories: [CTFs, 404CTF, Stegano, PNG : Un logo obèse , Un logo obèse1]
+categories: [CTFs, 404CTF, Stegano]
 tags: [CTF, 404CTF, Stegano]
 permalink: /CTFs/404CTF/Stegano/PNG_Un_logo_obese/Un_logo_obese1
 ---
