patch non functional links

--- a/_posts/CTFs/404_CTF/Stegano/PNG : Un logo obèse/Drôles de chimères/2022-11-07-README.md
+++ b/_posts/CTFs/404_CTF/Stegano/PNG : Un logo obèse/Drôles de chimères/2022-11-07-README.md
@@ -2,9 +2,9 @@
 title: CTFs | 404CTF | Stegano | PNG : Un logo obèse | Drôle de chimère
 author: BatBato
 date: 2022-11-07
-categories: [CTFs, 404CTF, Stegano]
+categories: [CTFs, 404CTF, Stegano, PNG : Un logo obèse]
 tags: [CTF, 404CTF, Stegano]
-permalink: /CTFs/404CTF/Stegano/PNG_Un_logo_obese__Drole_de_chimere
+permalink: /CTFs/404CTF/Stegano/PNG_Un_logo_obese/Drole_de_chimere
 ---
 
 # PNG : Un logo obèse 2/4
