--- a/_posts/CTFs/404_CTF/Divers/Je suis une théière/2022-11-07-README.md
+++ b/_posts/CTFs/404_CTF/Divers/Je suis une théière/2022-11-07-README.md
@@ -1,10 +1,10 @@
 ---
-title: CTFs | 404CTF | RESO | Je suis une théière
+title: CTFs | 404CTF | Divers | Je suis une théière
 author: BatBato
 date: 2022-11-07
-categories: [CTFs, 404CTF, RESO, Je suis une théière]
-tags: [CTF, 404CTF, RESO]
-permalink: /CTFs/404CTF/RESO/Je_suis_une_theiere
+categories: [CTFs, 404CTF, Divers, Je suis une théière]
+tags: [CTF, 404CTF, Divers]
+permalink: /CTFs/404CTF/Divers/Je_suis_une_theiere
 ---
 
 # Je suis une théière
