--- a/_posts/CTFs/CTF_INSA_2024/2024-05-02-Reseau.md
+++ b/_posts/CTFs/CTF_INSA_2024/2024-05-02-Reseau.md
@@ -16,38 +16,38 @@ permalink: /CTFs/CTF_INSA_2024/Reseau/
 # Réseau
 ## FTP
 
-![[ftp_sujet.png]]
+![[ftp_sujet.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/ftp_sujet.png)
 
 In this challenge, we have a `pcap` file and we are tasked to retrieve bob's password. We need to find its `FTP` password so lets filter by this protocol:
 
-![[ftp_wireshark.png]]
+![[ftp_wireshark.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/ftp_wireshark.png)
 
 We can see a `Login successful`. Lets `Left Click > Follow > TCP Stream` to see what happened in this session:
 
-![[ftp_password.png]]
+![[ftp_password.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/ftp_password.png)
 
 As you can see, we have the password `bobman75` for the user `bob`.
 
 ## Telnet
 
-![[telnet_sujet.png]]
+![[telnet_sujet.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/telnet_sujet.png)
 
 This is the same exercice as for the `FTP` but this time for the `TELNET` protocol. We can filter this protocol:
 
-![[telnet_wireshark.png]]
+![[telnet_wireshark.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/telnet_wireshark.png)
 
 Now we can do the same as before :
 `Left Click > Follow > TCP Stream`
 
 We can click on the arrows to look at the next streams:
 
-![[telnet_password.png]]
+![[telnet_password.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/telnet_password.png)
 
 And voilà, we can see in clear text the password `bobIscrazy` for the user `bob`.
 
 ## HTTP
 
-![[http_sujet.png]]
+![[http_sujet.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/http_sujet.png)
 
 Same as before but for the HTTP protocol. We are tasked to find the `phpmyadmin root password`. We can use the following filter:
 `http && http.request.full_uri contains phpmyadmin` 
@@ -56,39 +56,39 @@ or
 
 Now we can Follow TCP and we can see the username `root` and the password `FLAG%7BServic3-is-Not-HTTpS%7D`:
 
-![[http_flag.png]]
+![[http_flag.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/http_flag.png)
 We now URL decode: `FLAG%7BServic3-is-Not-HTTpS%7D` which gives us the flag:
 `FLAG{Servic3-is-Not-HTTpS}`
 
 ## WPA2
-![[wpa2_sujet.png]]
+![[wpa2_sujet.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/wpa2_sujet.png)
 
 Here, we have a Wifi communication using the protocol 802.11. You can refer to the following blog to get more information about wifi hacking [CyberHack](https://www.cyberark.com/resources/threat-research-blog/cracking-wifi-at-scale-with-one-simple-trick)
 
 We follow the given steps by first extracting the hash of the `pcap` file:
 
-![[wpa2_hash.png]]
+![[wpa2_hash.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/wpa2_hash.png)
 
 Now we can crack it using hashcat:
 
-![[wpa2_crack.png]]
+![[wpa2_crack.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/wpa2_crack.png)
 
 And voilà... We found the password `iloveyou` for the wifi named `X-n0`.
 
 Another method could be to use [aicrack-ng](https://www.kali.org/tools/aircrack-ng/). It will only need the `pcap` file to crack the password:
 
-![[wpa2_aircrack.png]]
+![[wpa2_aircrack.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/wpa2_aircrack.png)
 
 ## FTP 2
 
-![[ftp2_sujet.png]]
+![[ftp2_sujet.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/ftp2_sujet.png)
 
 Here the flag is not directly in the communication stream but it is located in a file.  Because we have sniffed all the trafic, we can export all the files that came through the communication. To do so, you can do the following:
 `File > Export Object > FTP data >`
 
 Now you have the list of all the files that went through the communication. You can save it locally:
-![[ftp2_export.png]]
+![[ftp2_export.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/ftp2_export.png)
 
 And voilà... We have the flag in the image:
 
-![[ftp2_flag.png]]
+![[ftp2_flag.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/ftp2_flag.png)
