--- a/_posts/CTFs/CTF_INSA_2024/Web/2024-05-02-LFI.md
+++ b/_posts/CTFs/CTF_INSA_2024/Web/2024-05-02-LFI.md
@@ -14,14 +14,14 @@ permalink: /CTFs/CTF_INSA_2024/Web/LFI/
 ---
 # LFI 1
 
-![[lfi1_sujet.png]]
+![[lfi1_sujet.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/lfi1_sujet.png)
 
 In this challenge, we are tasked to perform LFI on the given website. The LFI vulnerability often appear in the `GET` parameter directly in the URL. Here we can notice the `?page=accueil.php` where the `GET` parameter is `page` and its value is `accueil.php`.
 
 > Note that here we only have one `GET` parameter so the URL ends with `?page=...` but if we would have multiple parameters, we would have a URL looking like `?page=...&param2=...&param3=...`. Notice the first use of `?` and then exclusively the use of `&`.
 {: .prompt-info}
 
-![[lfi1_site.png]]
+![[lfi1_site.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/lfi1_site.png)
 
 The 3 steps when doing information gathering when we face a website in a CTF environment are:
 - Read the page : Look for usernames, passwords, domains, vhosts...
@@ -30,21 +30,21 @@ The 3 steps when doing information gathering when we face a website in a CTF env
 
 The website doesn't have much text, lets look at the source code by either using the shortcut `CTRL+U` or by right clicking on the page and select `Read source code`:
 
-![[lfi1_src_code.png]]
+![[lfi1_src_code.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/lfi1_src_code.png)
 
 As we can see, there is a comment (`<-- /var/www/flag.txt -->`) in the source code of the page. We can read the content of this file by replacing `accueil.php` in the URL by the path of the `flag.txt` file: 
 
-![[lfi1_exploit.png]]
+![[lfi1_exploit.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/lfi1_exploit.png)
 
 And voilà, you got your first LFI validated.
 
 # LFI 2
 
-![[lfi2_sujet.png]]
+![[lfi2_sujet.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/lfi2_sujet.png)
 
 This challenge is also an LFI but replacing the `GET` value as in the previous exemple won't work. As you can see the structure of the website is the same:
 
-![[lfi2_site.png]]
+![[lfi2_site.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/lfi2_site.png)
 
 An interesting thing about LFI is that it allows us to read files and also get Remote Code Execution (RCE). Here we are only interested in reading files. We don't have the path of the flag so why not reading the files we already know exists ? "But we don't know any file" you may say. And you are partially right, but we know that there is an `index.php`, an `accueil.php`... So why not read them ?
 
@@ -59,7 +59,7 @@ We can use it like this to `Base 64` encode the `accueil.php` file:
 
 After using this payload, we get the following result:
 
-![[lfi2_exploit.png]]
+![[lfi2_exploit.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/lfi2_exploit.png)
 
 We can decode it in the terminal using `echo "base64_string" | base64 -d` but you can also use online tools or `BurpSuite`. And once decoded, we get the flag in the `PHP` comment:
-![[lfi2_flag.png]]
+![[lfi2_flag.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/lfi2_flag.png)
