--- a/_posts/CTFs/CTF_INSA_2024/Web/2024-05-02-SQLi.md
+++ b/_posts/CTFs/CTF_INSA_2024/Web/2024-05-02-SQLi.md
@@ -13,7 +13,7 @@ permalink: /CTFs/CTF_INSA_2024/Web/SQLi/
 ---
 # SQLi 1
 
-![[sqli1_sujet.png]]
+![[sqli1_sujet.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/sqli1_sujet.png)
 
 Here, we are tasked to perform SQL injections. An IPS is configured, this means that we can't use tools like `SQLMap` because we would be blocked. We can see, that we are facing a login page. In CTF environment, the first thing that comes to your mind when you see a login page (after trying default credentials) is to perform an SQLi to bypass the authentication process. Using the payload `admin' OR True -- -` will result in a `SQL` query looking like:
 `Select * From Users where username='admin' OR True -- - AND password='a'`
@@ -24,23 +24,23 @@ As you can see, we are looking for the username `admin` but we use a `True` stat
 {: .prompt-info}
 
 
-![[sqli1_login.png]]
+![[sqli1_login.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/sqli1_login.png)
 
 And voilà, we are authenticated as `admin` and we have the flag:
 
-![[sqli1_flag.png]]
+![[sqli1_flag.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/sqli1_flag.png)
 
 # SQLi 2
 
-![[sqli2_sujet.png]]
+![[sqli2_sujet.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/sqli2_sujet.png)
 
 Here we need to perform a more difficult `SQLi`. We first need to search for the vulnerable parameter. Here it is `id`:
 
-![[sqli2_vuln.png]]
+![[sqli2_vuln.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/sqli2_vuln.png)
 
 We will try a `UNION based SQLi`. First we need to know how much columns are used in the `SQL` query. To do that we can simply use a payload like `UNION SELECT NULL -- -` then if there is no page printed out, we use the payload `UNION SELECT NULL,NULL -- -` and so on until we have a page that we can see:
 
-![[sqli2_collumns.png]]
+![[sqli2_collumns.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/sqli2_collumns.png)
 
 As we can see from our `UNION based SQLi`, we know that there are 4 rows in the query. We can now use this to read file like in the `LFI 2` challenge:
 
@@ -48,21 +48,21 @@ As we can see from our `UNION based SQLi`, we know that there are 4 rows in the 
 
 This payload gives us a `base64` string of the content of `index.php` source code. We can decode it and we get:
 
-![[sqli2_index.png]]
+![[sqli2_index.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/sqli2_index.png)
 
 There is no flag here. But we notice a file called `db_config.php`. Lets check this file:
 
-![[sqli2_flag.png]]
+![[sqli2_flag.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/sqli2_flag.png)
 
 And voilà... We get the username and password for the database and the flag.
 
 # SQLI 3
 
-![[sqli3_sujet.png]]
+![[sqli3_sujet.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/sqli3_sujet.png)
 
 Now this challenge is a bit harder than the previous one because we need to `upload` a shell to the machine. It can be a reverse or web shell, it doesn't matter. As we can see, when we enter a string we get the exact syntax of the `SQL` query:  
 
-![[sqli3_vuln.png]]
+![[sqli3_vuln.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/sqli3_vuln.png)
 
 We will use the following payload to write into the `css` folder (the only one where we have rights) in the `bipbip.php` file.
 
@@ -86,7 +86,7 @@ The content of the hexadecimal string it the following:
 
 Now we can just call our file and specify the command and the password:
 
-![[sqli3_exploit.png]]
+![[sqli3_exploit.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/sqli3_exploit.png)
 
 
 We want a reverse shell on the machine, I used this one:
@@ -102,7 +102,7 @@ I already set up a listener using `nc -lvnp 4444` and a `ngrok` to be able to be
 
 As you can see, I got a shell and I beautified it:
 
-![[sqli3_rev_shell.png]]
+![[sqli3_rev_shell.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/sqli3_rev_shell.png)
 
 Now we can access the full database by simply connecting to `mysql` using default credentials. Those credentials can be found in the `PHP` source code of the web pages:
 
@@ -110,7 +110,7 @@ Now we can access the full database by simply connecting to `mysql` using defaul
 
 Now we can list databases, list tables inside the `loginsqli` and show all the values in the `users` table:
 
-![[sqli3_mysql.png]]
+![[sqli3_mysql.png]](https://raw.githubusercontent.com/Nouman404/nouman404.github.io/main/_posts/CTFs/CTF_INSA_2024/photos/sqli3_mysql.png)
 
 We now have the password of `bob` (`superbob`) that is the flag to validate the challenge.
 
